@@ -1,0 +1,8 @@
+<table class="table">
+        <tr>
+                <th>Id</th>
+                <th>Task</th>
+                <th>Status</th>
+        </tr>
+        {display_tasks}    
+</table>
