@@ -1,0 +1,6 @@
+<tr>
+    <td>{id}</td>
+    <td>{task}</td>
+    <td>{status}</td>
+</tr>
+
