@@ -4,3 +4,4 @@ cody - created project
 sam - created tasks model
 sam - updated homepage to include remaining tasks and the table to tasks
 cody - Created the views/ Job 3
+sam - created maintenance page
